style.css
html {
    box-sizing: border-box;
  }
  *, *:before, *:after {
    box-sizing: inherit;
  }

body {
    height: 100vh;
    overflow: hidden;
}

main {
    display: flex;
    height: 100%;
}

    .logo-section {
        background-image: url("images/tokyo.jpg");
        background-size: cover;
        text-align: center;
        width: 40vw;
    }

        .logo-text {
            margin-top: 20vh;
            width: 100%;
            height: 10vh;
            position: relative;
            background-color: rgba(3, 3, 2, 0.685);
        }
            .logo {
                position: absolute;
                font-size: 4rem;
                font-weight: bold;
                color: white;
                padding: 1rem 0;
                left: 35%;
                top: -3px;
            }

            .neonText {
                color: #fff;
                animation: flicker 1.5s infinite alternate;    
                text-shadow:
                    0 0 7px #fff,
                    0 0 10px #fff,
                    0 0 21px #fff,
                    0 0 42px #0fa,
                    0 0 82px #0fa,
                    0 0 92px #0fa,
                    0 0 102px #0fa,
                    0 0 151px #0fa;
                }

                @keyframes flicker {
                0%, 18%, 22%, 25%, 53%, 57%, 100% {
                    text-shadow:
                    0 0 4px #fff,
                    0 0 11px #fff,
                    0 0 19px #fff,
                    0 0 40px #0fa,
                    0 0 80px #0fa,
                    0 0 90px #0fa,
                    0 0 100px #0fa,
                    0 0 150px #0fa;
                }
                20%, 24%, 55% {       
                    text-shadow: none;
                }
                }

            .logo-icon {
                position: absolute;
                left: 20%;
                top: 10px;
                z-index: 1;
            }

    .form-section {
        display: flex;
        flex-direction: column;
        width: 60vw;
    }

    .form-section > div {
        padding-left: 50px;
    }

        .top {
            display: flex;
            flex-direction: column;
            justify-content: flex-end;
            flex: 1;
            gap: 20px;
        }

            .top > p {
                font-size: 1.3rem;
                width: 70%;
            }

            .top p:last-child {
                margin-bottom: 40px;
            }

        .middle {
            background-color: aquamarine;
            padding-bottom: 50px;
            flex: 1;
            width: 100%;
        }

            .form-header {
                font-size: 30px;
                font-weight: bold;
                width: 100%;
                margin-top: 20px;
            }

            form {
                display: flex;
                flex-flow: row wrap;
                gap: 30px;
            }

                form > div {
                    display: flex;
                    flex-direction: column;
                    width: 35%;
                }

                input {
                    height: 1.5rem;
                }


        .bottom {
            flex: 1;
            display: flex;
            gap: 30px;
            flex-direction: column;
        }

            .bottom button {
                width: 10rem;
                height: 3.5rem;
                margin-top: 2rem;
                font-weight: bold;
                font-size: 1rem;
            }

            .bottom p {
                font-weight: bold;
                font-size: 1.5rem;
            }

/* Mobile layout */

@media screen and (max-width: 850px) {
        main {
            flex-direction: column;
            overflow: visible;
        }
            

            .logo-section { 
                width: 100%;
                height: 30vh;
                background-size: contain;
            }
                .logo-text {
                    margin-top: 10vh;
                    width: 100%;
                    height: 10vh;
                    position: relative;
                    background-color: rgba(3, 3, 2, 0.685);
                }
                    .logo {
                        position: absolute;
                        font-size: 4rem;
                        font-weight: bold;
                        color: white;
                        padding: 1rem 0;
                        left: 20%;
                        top: -3px;
                    }



                .neonText {
                    color: #fff;
                    animation: flicker 1.5s infinite alternate;    
                    text-shadow:
                      0 0 7px #fff,
                      0 0 10px #fff,
                      0 0 21px #fff,
                      0 0 42px #0fa,
                      0 0 82px #0fa,
                      0 0 92px #0fa,
                      0 0 102px #0fa,
                      0 0 151px #0fa;
                  }
        
                  @keyframes flicker {
                    0%, 18%, 22%, 25%, 53%, 57%, 100% {
                      text-shadow:
                        0 0 4px #fff,
                        0 0 11px #fff,
                        0 0 19px #fff,
                        0 0 40px #0fa,
                        0 0 80px #0fa,
                        0 0 90px #0fa,
                        0 0 100px #0fa,
                        0 0 150px #0fa;
                    }
                    20%, 24%, 55% {       
                      text-shadow: none;
                    }
                  }

                .logo-icon {
                    position: absolute;
                    top: 10px;
                    left: 3%;
                    z-index: 1;
                }        

            .form-section {
                display: block;
                width: 100vw;
                height: 70vh;
                overflow: visible;
            }

            .form-section > div {
                padding: 10px
            }
                .top {
                    display: flex;
                    flex-direction: column;
                    justify-content: flex-end;
                    align-items: center;
                    gap: 20px;
                    padding: 30px;
                }
        
                    .top > p {
                        font-size: 1.2rem;
                        width: 100%;
                    }
        
                    .top p:last-child {
                        margin-bottom: 0px;
                    }
        
                .middle {
                    background-color: aquamarine;
                    padding-bottom: 50px;
                    width: 100%;
                }
        
                    .form-header {
                        font-size: 30px;
                        font-weight: bold;
                        width: 100%;
                        margin-top: 0px;
                    }
        
                    form {
                        display: flex;
                        flex-flow: row wrap;
                        gap: 10px;
                    }
        
                        form > div {
                            display: flex;
                            flex-direction: column;
                            width: 47%;
                        }
                        
                        .form-label {
                            font-size: 16px;
                        }

                        input {
                            height: 1.5rem;
                        }
        
        
                .bottom {
                    display: flex;
                    gap: 30px;
                    flex-direction: column;
                }
        
                    .bottom button {
                        width: 10rem;
                        height: 3.5rem;
                        margin-top: 1rem;
                        font-weight: bold;
                        font-size: 1rem;
                    }
        
                    .bottom p {
                        font-weight: bold;
                        font-size: 1.5rem;
                    }
  }

